--- a/index.html
+++ b/index.html
@@ -85,7 +85,6 @@
       justify-content: center;
       z-index: 99999;
     }
-    .hidden { visibility: hidden; }
   </style>
 </head>
 <body>
@@ -158,6 +157,7 @@
       if (index !== -1) playerCards.splice(index, 1);
       lastCard = card;
       log(`You played ${card}`);
+      document.getElementById("playerHand").style.visibility = "hidden";
       renderHands();
 
       if (card === "Slap") return initiateSlap();
@@ -171,9 +171,6 @@
     }
 
     function computerTurn() {
-      const playerHandDiv = document.getElementById("playerHand");
-      playerHandDiv.classList.add("hidden");
-
       if (computerCards.length === 0) return showEndScreen("Axilian ran out of cards. You win!");
 
       const playable = getPlayableCards(computerCards);
@@ -217,7 +214,9 @@
 
     function startUserTurn() {
       if (playerCards.length === 0) return showEndScreen("You played all your cards. You win!");
-      document.getElementById("playerHand").classList.remove("hidden");
+      const playerHandDiv = document.getElementById("playerHand");
+      playerHandDiv.style.visibility = "visible";
+      playerHandDiv.style.pointerEvents = "auto";
       renderHands();
       startUserTurnTimer();
     }
