--- a/index.html
+++ b/index.html
@@ -5,277 +5,214 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Axel-One: Web Edition</title>
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
     body {
-      font-family: 'Ubuntu', sans-serif;
-      background: #f0f0f0;
+      font-family: monospace;
+      background: #1a1a1a;
+      color: white;
       text-align: center;
       padding: 20px;
-      display: none;
-      position: relative;
     }
-    h1 { color: #333; }
-    .cards { margin: 20px 0; }
-    .cards button {
-      margin: 5px;
+    .card {
+      display: inline-block;
+      background: #333;
+      color: #fff;
+      padding: 10px 20px;
+      margin: 10px;
+      border: 2px solid #555;
+      border-radius: 10px;
+      cursor: pointer;
+      transition: transform 0.2s;
+    }
+    .card:hover {
+      transform: scale(1.1);
+    }
+    .hidden {
+      visibility: hidden;
+    }
+    #slapButton {
       padding: 10px 20px;
       font-size: 16px;
+      margin-top: 20px;
+      background-color: red;
+      border: none;
+      color: white;
       cursor: pointer;
     }
-    #log {
-      margin-top: 30px;
-      max-height: 300px;
-      overflow-y: auto;
-      text-align: left;
-      background: #fff;
-      padding: 10px;
-      border: 1px solid #ccc;
+    #timer {
+      font-size: 20px;
+      margin-top: 10px;
     }
-    .slap-btn {
-      background-color: #f44336;
-      color: white;
-      font-weight: bold;
-    }
-    .hand { margin: 10px 0; }
-    #overlay {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: white;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 24px;
-      z-index: 10000;
-    }
-    .flash-red {
-      animation: flash 0.5s;
-    }
-    @keyframes flash {
-      0% { background-color: red; }
-      100% { background-color: #f0f0f0; }
-    }
-    #countdown {
-      font-size: 24px;
-      font-weight: bold;
-      color: green;
-      position: absolute;
-      top: 0;
-      right: 0;
-      padding: 10px;
-      z-index: 9999;
-    }
-    .countdown-warning {
+    .flash {
       color: red;
       animation: flash 0.5s infinite alternate;
     }
-    .end-overlay {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: black;
-      color: white;
-      font-size: 32px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      z-index: 99999;
+    @keyframes flash {
+      from { color: white; }
+      to { color: red; }
     }
   </style>
 </head>
 <body>
-  <div id="overlay">Matching with a random Axilian... please wait...</div>
   <h1>Axel-One: Web Edition</h1>
-  <div id="countdown" style="display:none"></div>
-  <p><strong>Your Hand:</strong></p>
-  <div class="hand" id="playerHand"></div>
-  <div id="slapArea" style="display:none">
-    <button class="slap-btn" onclick="handleSlap('player')">SLAP!</button>
-  </div>
-  <div id="log"></div>
-  <audio id="deathSound" src="death.mp3"></audio>
-  <div id="endScreen" class="end-overlay" style="display:none"></div>
+  <div id="game"></div>
+  <button id="slapButton" style="display:none">SLAP!</button>
+  <div id="timer"></div>
 
   <script>
-    let lastCard = null;
+    const gameDiv = document.getElementById("game");
+    const slapButton = document.getElementById("slapButton");
+    const timerDisplay = document.getElementById("timer");
+
+    let userHand = [];
+    let axilianHand = [];
+    let currentCard = null;
+    let isUserTurn = true;
     let slapTimeout = null;
-    let playerCards = [];
-    let computerCards = [];
-    let userTurnTimer = null;
-    const USER_TURN_LIMIT = 10000;
-    let countdownInterval = null;
+    let slapStart = 0;
+    let timerInterval;
 
-    function log(msg) {
-      const logBox = document.getElementById("log");
-      logBox.innerHTML += `<div>> ${msg}</div>`;
-      logBox.scrollTop = logBox.scrollHeight;
+    const cardTypes = ["1", "2", "3", "Swap", "Slap", "Blank"];
+
+    function drawCard() {
+      return cardTypes[Math.floor(Math.random() * cardTypes.length)];
     }
 
-    function updateCountdown(secondsLeft) {
-      const countdown = document.getElementById("countdown");
-      countdown.style.display = "block";
-      countdown.textContent = `Time left: ${Math.ceil(secondsLeft / 1000)}s`;
-      countdown.classList.toggle("countdown-warning", secondsLeft <= 3000);
+    function dealCards() {
+      for (let i = 0; i < 5; i++) {
+        userHand.push(drawCard());
+        axilianHand.push(drawCard());
+      }
     }
 
-    function startUserTurnTimer() {
-      clearTimeout(userTurnTimer);
-      clearInterval(countdownInterval);
+    function render() {
+      gameDiv.innerHTML = "";
+      gameDiv.innerHTML += `<h2>Top Card: ${currentCard ?? "None"}</h2>`;
+      gameDiv.innerHTML += `<h3>Axilian has ${axilianHand.length} cards</h3>`;
+      if (isUserTurn) {
+        gameDiv.innerHTML += `<h3>Your Hand:</h3>`;
+        userHand.forEach((card, index) => {
+          const cardDiv = document.createElement("div");
+          cardDiv.className = "card";
+          cardDiv.innerText = card;
+          cardDiv.onclick = () => playCard(index, true);
+          gameDiv.appendChild(cardDiv);
+        });
+      } else {
+        gameDiv.innerHTML += `<h3>Your Hand: [Hidden]</h3>`;
+      }
+    }
 
-      let timeLeft = USER_TURN_LIMIT;
-      updateCountdown(timeLeft);
-      countdownInterval = setInterval(() => {
-        timeLeft -= 100;
-        updateCountdown(timeLeft);
-        if (timeLeft <= 0) {
-          clearInterval(countdownInterval);
+    function isValidMove(card, top) {
+      if (card === "Blank") return true;
+      if (card === "Swap" || card === "Slap") return true;
+      if (!top) return true;
+      if (top === "1") return ["1", "2", "Swap", "Slap"].includes(card);
+      if (top === "2") return ["1", "2", "3", "Swap", "Slap"].includes(card);
+      if (top === "3") return ["2", "3", "Swap", "Slap"].includes(card);
+      if (top === "Swap" || top === "Blank") return true;
+      if (top === "Slap") return false;
+      return false;
+    }
+
+    function playCard(index, isUser) {
+      let hand = isUser ? userHand : axilianHand;
+      const card = hand[index];
+      if (!isValidMove(card, currentCard)) return;
+
+      hand.splice(index, 1);
+      currentCard = card;
+      render();
+
+      if (card === "Swap") {
+        [userHand, axilianHand] = [axilianHand, userHand];
+        alert("Cards swapped!");
+      } else if (card === "Slap") {
+        startSlap();
+        return;
+      } else if (card === "Blank") {
+        hand.push(drawCard());
+        hand.sort(() => Math.random() - 0.5); // Shuffle hand
+      }
+
+      checkBurn(hand);
+      switchTurn();
+    }
+
+    function checkBurn(hand) {
+      if (!hand.some(c => isValidMove(c, currentCard))) {
+        alert("No playable cards! Burning 2 random cards...");
+        for (let i = 0; i < 2 && hand.length > 0; i++) {
+          hand.splice(Math.floor(Math.random() * hand.length), 1);
         }
-      }, 100);
-
-      userTurnTimer = setTimeout(() => {
-        log("You took too long to move.");
-        const countdown = document.getElementById("countdown");
-        countdown.textContent = "You took too long!! You died.";
-        countdown.className = "countdown-warning";
-        const deathSound = document.getElementById("deathSound");
-        if (deathSound) deathSound.play();
-        document.body.classList.add('flash-red');
-        setTimeout(() => showEndScreen("You took too long!! You died."), 3000);
-      }, USER_TURN_LIMIT);
-    }
-
-    function handlePlayerMove(card) {
-      clearTimeout(userTurnTimer);
-      clearInterval(countdownInterval);
-      document.getElementById("countdown").style.display = "none";
-
-      const index = playerCards.indexOf(card);
-      if (index !== -1) playerCards.splice(index, 1);
-      lastCard = card;
-      log(`You played ${card}`);
-      document.getElementById("playerHand").style.visibility = "hidden";
-      renderHands();
-
-      if (card === "Slap") return initiateSlap();
-      if (card === "Swap") return handleSwap("player");
-      if (card === "Blank") {
-        log("Blank card played. No effect.");
-        return setTimeout(() => computerTurn(), 1000);
       }
-
-      setTimeout(() => computerTurn(), 1000);
     }
 
-    function computerTurn() {
-      if (computerCards.length === 0) return showEndScreen("Axilian ran out of cards. You win!");
-
-      const playable = getPlayableCards(computerCards);
-      const card = playable[Math.floor(Math.random() * playable.length)];
-      const index = computerCards.indexOf(card);
-      if (index !== -1) computerCards.splice(index, 1);
-      lastCard = card;
-      log(`Axilian played ${card}`);
-      renderHands();
-
-      if (card === "Slap") return initiateSlap();
-      if (card === "Swap") return handleSwap("computer");
-      if (card === "Blank") {
-        log("Axilian played a Blank card. No effect.");
-        return setTimeout(() => startUserTurn(), 1000);
-      }
-
-      setTimeout(() => startUserTurn(), 1000);
+    function startSlap() {
+      slapButton.style.display = "block";
+      slapStart = Date.now();
+      slapButton.onclick = () => endSlap(true);
+      slapTimeout = setTimeout(() => endSlap(false), 800);
     }
 
-    function getPlayableCards(hand) {
-      if (!lastCard || ["Slap", "Swap", "Blank"].includes(lastCard)) return hand;
-      const rules = {
-        "1": ["1", "2", "Slap", "Swap", "Blank"],
-        "2": ["1", "2", "3", "Slap", "Swap", "Blank"],
-        "3": ["2", "3", "Slap", "Swap", "Blank"]
-      };
-      return hand.filter(card => rules[lastCard]?.includes(card) || ["Slap", "Swap", "Blank"].includes(card));
-    }
-
-    function renderHands() {
-      const playerHandDiv = document.getElementById("playerHand");
-      playerHandDiv.innerHTML = "";
-      playerCards.forEach(card => {
-        const btn = document.createElement("button");
-        btn.textContent = card;
-        btn.onclick = () => handlePlayerMove(card);
-        playerHandDiv.appendChild(btn);
-      });
-    }
-
-    function startUserTurn() {
-      if (playerCards.length === 0) return showEndScreen("You played all your cards. You win!");
-      const playerHandDiv = document.getElementById("playerHand");
-      playerHandDiv.style.visibility = "visible";
-      playerHandDiv.style.pointerEvents = "auto";
-      renderHands();
-      startUserTurnTimer();
-    }
-
-    function handleSwap(by) {
-      if (by === "player") {
-        const temp = [...playerCards];
-        playerCards = [...computerCards];
-        computerCards = temp;
-        log("You swapped hands with the Axilian!");
-      } else {
-        const temp = [...computerCards];
-        computerCards = [...playerCards];
-        playerCards = temp;
-        log("Axilian swapped hands with you!");
-      }
-      renderHands();
-      setTimeout(() => by === "player" ? computerTurn() : startUserTurn(), 1000);
-    }
-
-    function initiateSlap() {
-      document.getElementById("slapArea").style.display = "block";
-      slapTimeout = setTimeout(() => handleSlap("computer"), 1000);
-    }
-
-    function handleSlap(who) {
-      document.getElementById("slapArea").style.display = "none";
+    function endSlap(userWon) {
+      slapButton.style.display = "none";
       clearTimeout(slapTimeout);
-      if (who === "player") {
-        log("You slapped first! Axilian takes a penalty card.");
-        computerCards.push("1");
+      if (userWon) {
+        alert("You slapped first! Axilian takes 2 cards.");
+        axilianHand.push(drawCard(), drawCard());
       } else {
-        log("Axilian slapped first! You take a penalty card.");
-        playerCards.push("1");
+        alert("Axilian slapped first! You take 2 cards.");
+        userHand.push(drawCard(), drawCard());
       }
-      renderHands();
-      setTimeout(() => who === "player" ? computerTurn() : startUserTurn(), 1000);
+      render();
+      switchTurn();
     }
 
-    function showEndScreen(message) {
-      document.getElementById("endScreen").innerText = message;
-      document.getElementById("endScreen").style.display = "flex";
+    function switchTurn() {
+      isUserTurn = !isUserTurn;
+      render();
+      resetTimer();
+      if (!isUserTurn) setTimeout(axilianMove, 500);
     }
 
-    function initiateGame() {
-      playerCards = shuffle(["1", "2", "3", "Slap", "Swap", "Blank", "1", "2", "3"]);
-      computerCards = shuffle(["1", "2", "3", "Slap", "Swap", "Blank", "1", "2", "3"]);
-      document.getElementById("overlay").style.display = "none";
-      document.body.style.display = "block";
-      renderHands();
-      log("Matched! You go first.");
-      startUserTurn();
+    function axilianMove() {
+      let moveIndex = -1;
+      const priorities = ["Slap", "Swap", "1", "2", "3", "Blank"];
+      for (let type of priorities) {
+        moveIndex = axilianHand.findIndex(c => c === type && isValidMove(c, currentCard));
+        if (moveIndex !== -1) break;
+      }
+      if (moveIndex !== -1) playCard(moveIndex, false);
+      else {
+        alert("Axilian burns 2 cards!");
+        checkBurn(axilianHand);
+        switchTurn();
+      }
     }
 
-    function shuffle(arr) {
-      return arr.sort(() => Math.random() - 0.5);
+    function resetTimer() {
+      clearInterval(timerInterval);
+      let time = 6;
+      timerDisplay.textContent = `Time left: ${time}`;
+      timerDisplay.classList.remove("flash");
+      timerInterval = setInterval(() => {
+        time--;
+        timerDisplay.textContent = `Time left: ${time}`;
+        if (time <= 3) timerDisplay.classList.add("flash");
+        if (time === 0) {
+          clearInterval(timerInterval);
+          if (isUserTurn) {
+            alert("Time's up! You lose 2 cards.");
+            checkBurn(userHand);
+            switchTurn();
+          }
+        }
+      }, 1000);
     }
 
-    setTimeout(() => initiateGame(), 3000);
+    dealCards();
+    render();
+    resetTimer();
   </script>
 </body>
 </html>
